Home work 3: FlexBox - 1.Navigation
	change paddings and margins for mobile screen size

	files changed:
		css/navigation.css
		navigation.html

--- a/navigation.html
+++ b/navigation.html
@@ -33,7 +33,9 @@
         </ul>
     </div>
     <div>
-        <button type="button" name="contactButton">CONTACT</button>
+        <!--        <button type="button" name="contactButton">CONTACT</button>-->
+        <!-- the button changed to link according the commentary to previous variant -->
+        <a class="btnLink" href="#">CONTACT</a>
     </div>
 </nav>
 
