Home work 3: FlexBox - 3. Card
	not finished fix

--- a/card.html
+++ b/card.html
@@ -20,6 +20,7 @@
 <div class="mainWrapContainer">
     <div class="cardContainer">
         <div class="card bgFirst">
+            <div class="circle"></div>
             <div class="header">
                 <h3>Weekly Sales</h3>
                 <img src="icons/chart-bell-curve-cumulative.png" alt="icon" width="24px" height="24px">
